<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgRock"
            android:layout_width="416dp"
            android:layout_height="312dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fondo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/noe_john_fernando_sierra_sotrelo"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgRock"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/noe_sierra_tecsup_edu_pe"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <TextView
            android:id="@+id/tvDirection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/intihuatana_santa_anita"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmail" />

        <TextView
            android:id="@+id/tvNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_965862213"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDirection" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendExplicit"
            android:text="@string/editar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNumber" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnCall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_button"
        android:onClick="callPhone"
        android:text="@string/llamada"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_banner"
        app:srcCompat="@drawable/ic_phone" />

    <Button
        android:id="@+id/btnWsp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_button"
        android:text="@string/whatsapp"
        android:onClick="enviarWsp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCall"
        app:layout_constraintTop_toBottomOf="@+id/cl_banner"
        app:srcCompat="@drawable/ic_whatsapp" />

    <Button
        android:id="@+id/btnMessage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_button"
        android:onClick="enviarSMS"
        android:text="@string/mensaje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toEndOf="@+id/btnWsp"
        app:layout_constraintTop_toBottomOf="@+id/cl_banner" />


</androidx.constraintlayout.widget.ConstraintLayout>